--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
+<% include ./partials/boilerplate.ejs %>
 
-  <!-- Sets the size of the window equal to the size of the screen -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Tells the browser how to render the page in Microsoft Edge -->
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <title>Como Say What!?</title>
-  <link rel="stylesheet" type="text/css" href="../public/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="../public/css/style.css">
-</head>
-<body>
   <div>
     <h1><%= message %></h1>
     <h3><%= subTitle %></h3>
@@ -30,5 +16,5 @@
       and <%- language -%>.
     <% } %>
   <% }) -%></p>
-</body>
-</html>
+
+<% include ./partials/footer.ejs %>
