outlines index view logic to render data

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/boilerplate.ejs %>
+<% include ./partials/boilerplate %>
 
   <div>
     <h1><%= message %></h1>
@@ -17,4 +17,4 @@
     <% } %>
   <% }) -%></p>
 
-<% include ./partials/footer.ejs %>
+<% include ./partials/footer %>
