--- a/views/words/word-single.ejs
+++ b/views/words/word-single.ejs
@@ -5,7 +5,7 @@
   <h2><%= word.english %></h2>
   <a href="/words/<%= word.id %>/edit">Edit this word</a>
 
-  <form action="/words/<%= word.id %>?_method=Delete" method="Post">
+  <form action="/words/<%= word.id %>?_method=DELETE" method="post">
     <input type="Submit" value="Delete">
   </form>
   <a href="/words/">See all words</a>
