--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,10 @@
 
   <div>
     <h1><%= message %></h1>
-    <h2><%= subTitle %></h2>
+    <h2></h2>
   </div>
 
-  <div>
-    <h3>This is a personal "dictionary" for a Spanish language learner.</h3>
-  </div>
-
-  <button type="button">Let's Start!</button>
+  <footer>
+    <a href="/words"><button type="button">Let's Start!</button></a>
+  </footer>
 <% include ./partials/footer %>
