--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -14,3 +14,4 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+  <header><a href="/">&#191;Como <span>Say What</span>!?</a></header>
