applies styling to make the application more appealing

--- a/views/words/word-add.ejs
+++ b/views/words/word-add.ejs
@@ -3,7 +3,8 @@
 <form method="POST" action="/words">
   <input name="english" type="text" placeholder="English">
   <input name="spanish" type="text" placeholder="Spanish">
-  <input type="Submit" value="Add Word">
+  <input type="Submit" value="Add Word" class="submit">
 </form>
+<a href="/words/" class="back">Go Back</a>
 
 <% include ../partials/footer %>
