--- a/views/words/word-edit.ejs
+++ b/views/words/word-edit.ejs
@@ -4,7 +4,8 @@
   <input name="id" type="hidden" value="<%= data.id %>">
   <input name="english" type="text" value="<%= data.english %>">
   <input name="spanish" type="text" value="<%= data.spanish %>">
-  <input type="Submit" value="Edit Word" >
+  <input type="Submit" value="Edit Word">
 </form>
+<a href="/words/" class="back">Go Back</a>
 
 <% include ../partials/footer %>
