--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ header {
   background-color: #4c3f54;
   font-size: 1.5em;
   height: 25px;
-  padding: 20px;
+  padding: 15px;
   text-align: left;
 }
 
@@ -31,11 +31,67 @@ h1, button {
 
 h1 {
   font-size: 2em;
+}
+
+#welcome, .back {
   color: #f2c057;
+}
+
+div h1 {
+  color: #d13525;
+}
+
+div h2 {
+  color: #4c3f54;
+  font-size: 1.5em;
 }
 
 button {
   padding: 10px 20px;
   font-size: 2em;
   cursor: pointer;
+}
+
+a {
+  margin: 2%;
+}
+
+.back, .link {
+  font-size: 1.5em;
+}
+
+#add {
+  margin: 2%;
+  font-size: 2em;
+}
+
+p {
+  font-size: 1.5em;
+}
+
+.word {
+  border: 1px solid steelblue;
+  background-color: #f2c057;
+  width: 50vw;
+  margin: 0 auto;
+  padding: 2%;
+}
+
+.word div {
+  font-size: 1.25em;
+  display: flex;
+  margin-left: 6%;
+}
+
+.word div a {
+  display: space-around;
+}
+
+form {
+  margin: 2%;
+}
+
+input {
+  height: 25px;
+  font-size: 1.25em;
 }
