--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/boilerplate %>
 
   <div>
-    <h1><%= message %></h1>
+    <h1 id="welcome"><%= message %></h1>
     <h2></h2>
   </div>
 
